--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@react-input/mask": "^2.0.4",
     "@vercel/kv": "^3.0.0",
-    "chart.js": "^4.4.9",
+    "chart.js": "^4.5.0",
+    "chartjs-plugin-crosshair": "^2.0.0",
     "html-react-parser": "^5.2.4",
     "ioredis": "^5.6.1",
     "katex": "^0.16.22",
