--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-NEXT_PUBLIC_API_URL=http://37.27.23.255:2222
+NEXT_PUBLIC_API_URL=https://test.smartcoders.uz
 # NEXT_PUBLIC_API_URL="https://api.edumark.uz"
 NEXT_PUBLIC_REGIONS_API="https://raw.githubusercontent.com/MIMAXUZ/uzbekistan-regions-data/master/JSON/regions.json"
 NEXT_PUBLIC_DISTRICTS_API="https://raw.githubusercontent.com/MIMAXUZ/uzbekistan-regions-data/master/JSON/districts.json"
-NEXT_PUBLIC_ADMIN_API=http://edumark.uz:8001/supper_users
-NEXT_PUBLIC_CLASSESS_API=http://37.27.23.255:8002
-NEXT_PUBLIC_STUDENT_CREATE=http://37.27.23.255:8003
-NEXT_PUBLIC_TESTS_API=http://37.27.23.255:8004
+NEXT_PUBLIC_ADMIN_API=https://test.smartcoders.uz/users
+NEXT_PUBLIC_CLASSESS_API=https://test.smartcoders.uz/classes
+NEXT_PUBLIC_STUDENT_CREATE=https://test.smartcoders.uz/students
+NEXT_PUBLIC_TESTS_API=https://test.smartcoders.uz/student_test
