--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ NEXT_PUBLIC_ADMIN_API=https://test.smartcoders.uz/users
 NEXT_PUBLIC_CLASSESS_API=https://test.smartcoders.uz/classes
 NEXT_PUBLIC_STUDENT_CREATE=https://test.smartcoders.uz/students
 NEXT_PUBLIC_TESTS_API=https://test.smartcoders.uz/student_test
+NEXT_PUBLIC_TEACHER_API=https://test.smartcoders.uz/teachers/teacher
