--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-input/mask": "^2.0.4",
     "@vercel/kv": "^3.0.0",
+    "antd": "^5.27.3",
     "chart.js": "^4.5.0",
     "chartjs-plugin-crosshair": "^2.0.0",
     "html-react-parser": "^5.2.4",
